# experiments

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  do_build.sh  format_source.sh  todo  todo.txt
atmos/lib_framework/: CMakeLists.txt
atmos/lib_framework/framework/concurrent/: lock_ptr.h  lockable_individual.h  lockable_triple.h
atmos/lib_framework/framework/logging/: log.cpp  log.h
atmos/lib_framework/framework/meta_programming/: va_macro.h
atmos/lib_framework/framework/perf/: metrics.cpp  metrics.h  stack_timer.cpp  stack_timer.h
atmos/lib_framework/framework/tweak/: tweak.h
atmos/lib_framework/framework/utility/: associative_vector.h  buffer_view-inl.h  buffer_view.h  hash_utils.h  scoped_ptr.h  string_utils.cpp  string_utils.h
atmos/lib_framework/framework_tests/concurrent/: lock_ptr_tests.cpp  lock_ptr_tests.h  lockable_tests.cpp  lockable_tests.h
atmos/lib_framework/framework_tests/main/: tests.cpp  tests.h
atmos/lib_gl/: CMakeLists.txt
atmos/lib_gl/gl/batch/: gl_batch_binding.cpp  gl_batch_binding.h  gl_opaque_batch.cpp  gl_opaque_batch.h  gl_transparent_batch.cpp  gl_transparent_batch.h
atmos/lib_gl/gl/buffer/: gl_buffer.cpp  gl_buffer.h  gl_compute_buffer.cpp  gl_compute_buffer.h  gl_geometry.cpp  gl_geometry.h  gl_index_buffer.cpp  gl_index_buffer.h  gl_vertex_attrib_array_tracker.cpp  gl_vertex_attrib_array_tracker.h  gl_vertex_buffer.cpp  gl_vertex_buffer.h  gl_vertex_format.cpp  gl_vertex_format.h  gl_vertex_parameter.cpp  gl_vertex_parameter.h
atmos/lib_gl/gl/context/: gl_back_buffer.cpp  gl_back_buffer.h  gl_context.cpp  gl_context.h
atmos/lib_gl/gl/defines/: gl_debug.cpp  gl_debug.h  gl_includes.h  gl_redefine_functions.h
atmos/lib_gl/gl/material/: gl_compiler.cpp  gl_compiler.h  gl_fragment_shader.cpp  gl_fragment_shader.h  gl_parameter.cpp  gl_parameter.h  gl_program.cpp  gl_program.h  gl_render_states.cpp  gl_render_states.h  gl_shader.cpp  gl_shader.h  gl_vertex_shader.cpp  gl_vertex_shader.h
atmos/lib_gl/gl/resource/: gl_compute_resource.cpp  gl_compute_resource.h  gl_geometry.cpp  gl_geometry.h  gl_index_resource.cpp  gl_index_resource.h  gl_resource.cpp  gl_resource.h  gl_vertex_attrib_array_tracker.cpp  gl_vertex_attrib_array_tracker.h  gl_vertex_format.cpp  gl_vertex_format.h  gl_vertex_parameter.cpp  gl_vertex_parameter.h  gl_vertex_resource.cpp  gl_vertex_resource.h
atmos/lib_gl/gl/shader/: gl_compiler.cpp  gl_compiler.h  gl_fragment_shader.cpp  gl_fragment_shader.h  gl_parameter.cpp  gl_parameter.h  gl_program.cpp  gl_program.h  gl_render_states.cpp  gl_render_states.h  gl_shader.cpp  gl_shader.h  gl_vertex_shader.cpp  gl_vertex_shader.h
atmos/lib_gl/gl/texture/: gl_color_buffer.cpp  gl_color_buffer.h  gl_color_target.h  gl_depth_buffer.cpp  gl_depth_buffer.h  gl_depth_target.h  gl_depth_texture2d.cpp  gl_depth_texture2d.h  gl_draw_target.cpp  gl_draw_target.h  gl_render_texture2d.cpp  gl_render_texture2d.h  gl_sampler.cpp  gl_sampler.h  gl_texture2d.cpp  gl_texture2d.h
atmos/lib_gl/gl/utility/: gl_markers.cpp  gl_markers.h
atmos/lib_gl/gl/window/: gl_back_buffer.cpp  gl_back_buffer.h  gl_window.cpp  gl_window.h
atmos/lib_igpu/: CMakeLists.txt
atmos/lib_igpu/igpu/batch/: batch.cpp  batch.h  batch_binding.cpp  batch_binding.h  batch_nodes.h  batch_parameters.cpp  batch_parameters.h  batch_utility.cpp  batch_utility.h  draw_parameters.h  instance_batch.h  opaque_batch.cpp  opaque_batch.h  opaque_batch_nodes.cpp  opaque_batch_nodes.h  primitive_block.cpp  primitive_block.h  raster_batch.h  raster_binding.h  raster_nodes.h  raster_utility.h  transparent_batch.h
atmos/lib_igpu/igpu/buffer/: buffer.h  buffer_raw.cpp  buffer_raw.h  buffer_usage.h  components.h  compute_buffer.h  geometry.cpp  geometry.h  index_buffer.h  index_format.cpp  index_format.h  topology.cpp  topology.h  vector_buffer.h  vertex_buffer.h  vertex_format.cpp  vertex_format.h  vertex_parameter.h
atmos/lib_igpu/igpu/compute/: compute_binding.h  compute_buffer.h  compute_parameters.h  compute_pipeline.cpp  compute_pipeline.h  compute_program.cpp  compute_program.h  compute_shader.h
atmos/lib_igpu/igpu/context/: back_buffer.cpp  back_buffer.h  batch_constraints.h  context.cpp  context.h  material_constraints.h  parameter_constraints.cpp  parameter_constraints.h  vertex_constraints.cpp  vertex_constraints.h
atmos/lib_igpu/igpu/material/: fragment_shader.h  material.cpp  material.h  parameter.cpp  parameter.h  primitive.cpp  primitive.h  program.cpp  program.h  program_parsing.cpp  program_parsing.h  render_states.cpp  render_states.h  shader.h  shader_stages.h  vertex_shader.h
atmos/lib_igpu/igpu/resource/: compute_resource.h  geometry.cpp  geometry.h  index_format.h  index_resource.h  resource_usage.h  topology.cpp  vertex_format.cpp  vertex_format.h  vertex_parameter.h  vertex_resource.h
atmos/lib_igpu/igpu/shader/: attribute_finder.cpp  attribute_finder.h  attribute_indexer.cpp  attribute_indexer.h  compute_program.cpp  constant.cpp  constant.h  constant_parameter.h  constant_parameters.h  constants.cpp  constants.h  fragment_shader.h  graphics_pipeline.cpp  graphics_pipeline.h  parameter.h  parameters.h  primitive.cpp  primitive.h  primitive_indexer.cpp  primitive_indexer.h  primitives.cpp  primitives.h  (+11 more)
atmos/lib_igpu/lib_igpu_third_party_builtins/: CMakeLists.txt
atmos/lib_vulkan/: CMakeLists.txt
dcs_test/: CMakeLists.txt
dcs_test/cooked_assets/shaders/: indirect_cull.comp.spv  indirect_draw.frag.spv  indirect_draw.vert.spv  shader.frag.spv  shader.vert.spv  textured.vert.spv
dcs_test/hack_port_example/: README.md
dcs_test/hack_port_example/shaders/: compileshaders.py
dcs_test/include/: dcs_test.h
dcs_test/raw_assets/shaders/: indirect_cull.comp  indirect_draw.frag  indirect_draw.vert  shader.frag  shader.vert  textured.frag  textured.vert
dcs_test/render_doc/: render_doc.cap
dcs_test/src/: dcs_big_mesh.cpp  dcs_big_mesh.h  dcs_compute_indirect_draw.cpp  dcs_compute_indirect_draw.h  dcs_test.cpp  dcs_test.h  dcs_utils.cpp  dcs_utils.h  main.cpp
dcs_test/tools/: shader_compiler.bat  shader_compiler.sh
(+609 files in other folders)
