
# Specify the minimum version for CMake
cmake_minimum_required(VERSION 3.1)
# CMAKE_POLICY(SET CMP0072 NEW)
project(experiments)

function(WARNINGS_AS_ERRORS PROJ)
	if(MSVC)
		target_compile_options(${PROJ} PRIVATE /W4 /WX)
	else()
		target_compile_options(${PROJ} PRIVATE -Wall -Wextra -pedantic -Werror)
	endif()
endfunction()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED  ON)
set(CMAKE_CXX_EXTENSIONS OFF)

STRING(REPLACE "/O2" "/Od" CMAKE_C_FLAGS_RELWITHDEBINFO ${CMAKE_C_FLAGS_RELWITHDEBINFO}) 
STRING(REPLACE "/DNDEBUG" "" CMAKE_C_FLAGS_RELWITHDEBINFO ${CMAKE_C_FLAGS_RELWITHDEBINFO}) 
STRING(REPLACE "/O2" "/Od" CMAKE_CXX_FLAGS_RELWITHDEBINFO ${CMAKE_C_FLAGS_RELWITHDEBINFO}) 
STRING(REPLACE "/DNDEBUG" "" CMAKE_CXX_FLAGS_RELWITHDEBINFO ${CMAKE_C_FLAGS_RELWITHDEBINFO}) 

add_subdirectory(library)
add_subdirectory(dcs_test)

set_property (DIRECTORY PROPERTY VS_STARTUP_PROJECT dcs_test)